objects/Mix__c.object
<CustomObject>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Mixes</relationshipLabel>
        <relationshipName>Mixes</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Primary_Genre__c</fullName>
        <label>Primary Genre</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Secondary_Genre__c</fullName>
        <label>Secondary Genre</label>
        <length>180</length>
        <type>Text</type>
    </fields>
    <label>Mix</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Mix Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mixes</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>